<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/dialog_outer"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        style="@style/dialog_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            style="@style/dialog_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_ts" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height" >

            <ImageView
                android:id="@+id/img_yzm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:contentDescription="@string/img_desc_todo" />

            <EditText
                android:layout_marginLeft="@dimen/default_page_padding"
                android:id="@+id/tv_yzm"
                style="@style/input_single_line"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="@string/text_djtpsx"
                android:textCursorDrawable="@null"
                android:layout_width="0dp" />
            <requestFocus />
        </LinearLayout>

        <Button
            android:id="@+id/btn_positive"
            style="@style/dialog_btn_positive"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_btn_height"
            android:layout_marginTop="@dimen/dialog_big_space"
            android:text="@string/ok" />
    </LinearLayout>

</RelativeLayout>