<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_page_default"
    android:orientation="vertical" >

    <include layout="@layout/common_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_page_padding"
        android:orientation="vertical"
        android:paddingLeft="@dimen/default_page_padding"
        android:paddingRight="@dimen/default_page_padding" >

        <TextView
            style="@style/text_explanatory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_page_padding"
            android:text="已成功注册，请选择认证方式" />

        <TextView
            style="@style/text_explanatory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_page_padding"
            android:background="@drawable/corner_bg_white"
            android:paddingBottom="@dimen/default_text_size"
            android:paddingLeft="@dimen/default_page_padding"
            android:paddingRight="@dimen/default_page_padding"
            android:paddingTop="@dimen/default_text_size"
            android:text="@string/text_rzhc" />

        <Button
            android:id="@+id/btn_zc_smrz"
            style="@style/btn_red_arrow_right"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/big_page_padding"
            android:text="@string/btn_text_zc_smrz" />
        <Button
            android:id="@+id/btn_lsrz"
            style="@style/btn_red_arrow_right"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/big_page_padding"
            android:text="@string/btn_text_jxlsrz" />
        <Button
            android:id="@+id/btn_qtxxrz"
            style="@style/btn_text_red"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/big_page_padding"
            android:text="@string/btn_text_qtxx_smrz" />
        <Button
            android:id="@+id/btn_brz"
            style="@style/btn_text_gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/big_page_padding"
            android:text="@string/btn_text_brz" />
        
        
    </LinearLayout>

</LinearLayout>