<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_buttons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="@dimen/normal_btn_layout_margin_bottom"
    android:gravity="center_horizontal"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/btn_dl"
        style="@style/normal_btn_green"
        android:layout_width="@dimen/normal_btn_width_1"
        android:layout_height="@dimen/normal_btn_height_1"
        android:layout_marginRight="@dimen/normal_btn_margin_left"
        android:text="@string/bt_text_dl" />

    <Button
        android:id="@+id/btn_zc"
        style="@style/normal_btn_blue"
        android:layout_width="@dimen/normal_btn_width_1"
        android:layout_height="@dimen/normal_btn_height_1"
        android:text="@string/bt_text_zc" />

    <Button
        android:id="@+id/btn_zhmm"
        style="@style/normal_btn_blue"
        android:layout_width="@dimen/normal_btn_width_1"
        android:layout_height="@dimen/normal_btn_height_1"
        android:layout_marginLeft="@dimen/normal_btn_margin_left"
        android:text="@string/bt_text_zhmm" />

</LinearLayout>