<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/dialog_outer"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        style="@style/dialog_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            style="@style/dialog_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_ts" />

        <TextView
            android:id="@+id/tv_tip_message"
            style="@style/dialog_text_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_small_space"
            android:text="@string/text_default" />

        <Button
            android:id="@+id/btn_positive"
            style="@style/dialog_btn_positive"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_btn_height"
            android:layout_marginTop="@dimen/dialog_big_space"
            android:text="@string/btn_text_wzdl" />
    </LinearLayout>

</RelativeLayout>