<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_page_default"
    android:orientation="vertical" >

    <include layout="@layout/common_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/default_page_padding"
        android:orientation="vertical"
        android:paddingLeft="@dimen/default_page_padding"
        android:paddingRight="@dimen/default_page_padding" >

        <TextView
            android:id="@+id/tv_tips"
            style="@style/text_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_page_padding" />

        <EditText
            android:maxLength="20"
            android:id="@+id/tv_ymm"
            style="@style/input_width_background"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/default_page_padding"
            android:hint="@string/text_ymm"
            android:inputType="textPassword" >
        </EditText>

        <EditText
            android:maxLength="20"
            android:id="@+id/tv_xmm"
            style="@style/input_width_background"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/default_page_padding"
            android:hint="@string/text_xmm"
            android:inputType="textPassword" >
        </EditText>

        <EditText
            android:maxLength="20"
            android:id="@+id/tv_qrmm"
            style="@style/input_width_background"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/default_page_padding"
            android:hint="@string/text_qrxmm"
            android:inputType="textPassword" >
        </EditText>

        <Button
            android:id="@+id/btn_xgmm"
            style="@style/normal_btn_blue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_btn_height_1"
            android:layout_marginTop="@dimen/default_page_padding"
            android:gravity="center"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>